css fix for scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -238,6 +238,8 @@ main#cv > section {
 .gallery-outer {
   width: 80ch;
   overflow-x: scroll;
+  scrollbar-color: var(--darkgray) lightgray;
+  scrolbar-width: thin;
 }
 
 .gallery {
